<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gennext Training | Online </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="title_activity_app_start">Online Training</string>
    <string name="dummy_button">Click Here</string>
    <string name="dummy_content">GenNext\nTraining</string>
    <string name="title_activity_activity_register">GenNext Training</string>
    <string name="title_activity_activity_main">GenNext Training</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">about</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Update</string>
    <string name="title_activity_latested_feeds">LatestedFeeds</string>
</resources>
