<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>


    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/menu_search"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_about"/>

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:showAsAction="never"/>

    <!-- Check updates -->
    <item android:id="@+id/action_check_updates"
        android:title="@string/action_check_updates"
        android:showAsAction="never" />


</menu>
